# $Id$

2007-03-11	Konstantin V. Arkhipov

	* meta/: mysterious 'table per class hierarchy' implemented.

	* main/Base/LightMetaProperty.class.php: no more setters, since it's
	an immutable one.

	* meta/: new switched implemented for build script: --only-containers,
	--no-schema, --no-schema-check, --force; also automagically searches
	for configuration files now.

2007-03-10	Anton E. Lebedevich

	* core/OSQL/SQLFunction.class.php: aggregate modifier support added.

	* main/Criteria/Projections/DistinctCountProjection.class.php,
	main/Criteria/Projection.class.php: 'count(distinct ...)' projection
	added.

	* core/Form/Filters/CompressWhitespaceFilter.class.php:
	CompressWhitespaceFilter added.

2007-03-09	Konstantin V. Arkhipov

	* core/Form/Filters/RussianTypograph.class.php: now uses internal
	filter's chain too: Trim + CompressWhitespace.

	* core/OSQL/SQLFunction.class.php: MappableObject implemented.

2007-03-07	Konstantin V. Arkhipov

	* core/, main/: all childless classes are final now.

	* main/Base/DateRange.class.php: now accepts Date object's.

2007-03-07	Ivan Y. Khvostishkov

	* main/Utils/ArrayUtils.class.php: method for getting symmetric array
	from values.

	* core/Form/Primitive.class.php,
	core/Form/Primitives/PrimitivePlainList.class.php: plainChoice() for
	simple plain arrays.

2007-03-06	Konstantin V. Arkhipov

	* meta/classes/MetaConfiguration.class.php: cascade fetch strategy
	also forced for spooked properties.

2007-03-05	Ivan Y. Khvostishkov

	* main/Base/DateRange.class.php: fixed default delimiters.

2007-03-05	Konstantin V. Arkhipov

	* main/DAOs/: getIdName() moved from StorableDAO to GenericDAO.

2007-03-04	Konstantin V. Arkhipov

	* main/Utils/DaoMoveHelper.class.php, main/Utils/DaoUtils.class.php,
	core/Form/Primitives/PrimitiveIdentifierList.class.php: copied from
	0.8.

2007-03-03	Konstantin V. Arkhipov

	* meta/: generation gap for proto-classes implemented, as requested by
	Antony.
